--- a/Assignment4_mental_health_survey.ipynb
+++ b/Assignment4_mental_health_survey.ipynb
@@ -508,19 +508,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>state</th>\n",
+       "      <th>self_employed</th>\n",
+       "      <th>family_history</th>\n",
+       "      <th>treatment</th>\n",
+       "      <th>work_interfere</th>\n",
+       "      <th>no_employees</th>\n",
+       "      <th>...</th>\n",
+       "      <th>anonymity</th>\n",
+       "      <th>leave</th>\n",
+       "      <th>mental_health_consequence</th>\n",
+       "      <th>phys_health_consequence</th>\n",
+       "      <th>coworkers</th>\n",
+       "      <th>supervisor</th>\n",
+       "      <th>mental_health_interview</th>\n",
+       "      <th>phys_health_interview</th>\n",
+       "      <th>mental_vs_physical</th>\n",
+       "      <th>obs_consequence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-08-27 11:29:31</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Often</td>\n",
+       "      <td>6-25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Somewhat easy</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-08-27 11:29:46</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Often</td>\n",
+       "      <td>26-100</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Somewhat difficult</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2014-08-27 11:31:50</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>1-5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Somewhat difficult</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2014-08-27 11:32:39</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>100-500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Very difficult</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Maybe</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2014-08-27 11:32:44</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sometimes</td>\n",
+       "      <td>6-25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Some of them</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Don't know</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Timestamp  Age  Gender         Country state self_employed  \\\n",
+       "0   2014-08-27 11:29:31   37  Female   United States    IL           NaN   \n",
+       "3   2014-08-27 11:29:46   31    Male  United Kingdom   NaN           NaN   \n",
+       "6   2014-08-27 11:31:50   35  Female   United States    MI           NaN   \n",
+       "8   2014-08-27 11:32:39   42  Female   United States    IL           NaN   \n",
+       "10  2014-08-27 11:32:44   31    Male   United States    OH           NaN   \n",
+       "\n",
+       "   family_history treatment work_interfere no_employees  ...   anonymity  \\\n",
+       "0              No       Yes          Often         6-25  ...         Yes   \n",
+       "3             Yes       Yes          Often       26-100  ...          No   \n",
+       "6             Yes       Yes      Sometimes          1-5  ...          No   \n",
+       "8             Yes       Yes      Sometimes      100-500  ...          No   \n",
+       "10             No       Yes      Sometimes         6-25  ...  Don't know   \n",
+       "\n",
+       "                 leave mental_health_consequence phys_health_consequence  \\\n",
+       "0        Somewhat easy                        No                      No   \n",
+       "3   Somewhat difficult                       Yes                     Yes   \n",
+       "6   Somewhat difficult                     Maybe                   Maybe   \n",
+       "8       Very difficult                     Maybe                      No   \n",
+       "10          Don't know                        No                      No   \n",
+       "\n",
+       "       coworkers supervisor mental_health_interview phys_health_interview  \\\n",
+       "0   Some of them        Yes                      No                 Maybe   \n",
+       "3   Some of them         No                   Maybe                 Maybe   \n",
+       "6   Some of them         No                      No                    No   \n",
+       "8            Yes        Yes                      No                 Maybe   \n",
+       "10  Some of them        Yes                      No                    No   \n",
+       "\n",
+       "   mental_vs_physical obs_consequence  \n",
+       "0                 Yes              No  \n",
+       "3                  No             Yes  \n",
+       "6          Don't know              No  \n",
+       "8                  No              No  \n",
+       "10         Don't know              No  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def mental_health(df, agg_col):\n",
-    "\n",
-    "    mental_health =df.groupby('Genre')[agg_col].sum().reset_index()\n",
-    "    mental_health = best_seller_df.sort_values(agg_col, ascending=False)\n",
-    "    return mental_health\n",
-    "\n",
-    "best_selling_na = best_seller(raw_data, \"NA_Sales\")\n",
-    "best_selling_eu = best_seller(raw_data, \"EU_Sales\")\n",
-    "best_selling_jp = best_seller(raw_data, \"JP_Sales\")"
+    "underwent_treatment=raw_data1[raw_data1['treatment'].str.contains(\"Yes\")]\n",
+    "underwent_treatment.head()"
    ]
   },
   {
@@ -539,9 +746,8 @@
     }
    ],
    "source": [
-    "print(\"The Best Selling genre in NA is {}\".format(best_selling_na.iloc[0,0]))\n",
-    "print(\"The Best Selling genre in EU is {}\".format(best_selling_eu.iloc[0,0]))\n",
-    "print(\"The Best Selling genre in JP is {}\".format(best_selling_jp.iloc[0,0]))"
+    "freq_location =treatment_yes.groupby(['Country'])['treatment'].count()\n",
+    "freq_location.head(10)"
    ]
   },
   {
