group by country
Finding out count of people taken treatment in different locations

--- a/Assignment4_mental_health_survey.ipynb
+++ b/Assignment4_mental_health_survey.ipynb
@@ -732,21 +732,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Best Selling genre in NA is Shooter\n",
-      "The Best Selling genre in EU is Shooter\n",
-      "The Best Selling genre in JP is Role-Playing\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Australia       13\n",
+       "Bahamas, The     1\n",
+       "Belgium          1\n",
+       "Brazil           2\n",
+       "Bulgaria         2\n",
+       "Canada          37\n",
+       "Croatia          2\n",
+       "Denmark          2\n",
+       "Finland          1\n",
+       "France           2\n",
+       "Name: treatment, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "freq_location =treatment_yes.groupby(['Country'])['treatment'].count()\n",
+    "freq_location =underwent_treatment.groupby(['Country'])['treatment'].count()\n",
     "freq_location.head(10)"
    ]
   },
